<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nsv_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:id="@+id/ll_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/Mifos.DesignSystem.Spacing.screenHorizontalMargin"
        android:orientation="vertical">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/Mifos.DesignSystem.Size.LogoImageSize"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="@dimen/Mifos.DesignSystem.Size.LogoImageVerticalMargin"
            app:srcCompat="@drawable/feature_auth_mifos_logo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/feature_auth_ic_person">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/Mifos.DesignSystem.Spacing.marginBetweenItemsMedium"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/feature_auth_lock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/Mifos.DesignSystem.Spacing.marginBetweenItemsLarge"
            android:text="@string/login" />

        <LinearLayout
            android:id="@+id/or_text_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/Mifos.DesignSystem.Spacing.marginBetweenSectionsHalf"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <View
                android:id="@+id/le"
                style="@style/Mifos.DesignSystem.Components.HorizontalSpacer"
                android:layout_width="@dimen/width_0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/or_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/Mifos.DesignSystem.Spacing.marginWords"
                android:text="@string/or" />

            <View
                style="@style/Mifos.DesignSystem.Components.HorizontalSpacer"
                android:layout_width="@dimen/width_0dp"
                android:layout_weight="1" />
        </LinearLayout>


        <Button
            android:id="@+id/btn_register"
            style="@style/Mifos.DesignSystem.Components.Button.Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/create_an_account" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
