<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/cl_rootview"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/default_padding"
        tools:context="org.mifos.selfserviceapp.ui.activities.PassCodeActivity">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <android.support.v7.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/skip"
                android:id="@+id/btn_skip"
                android:layout_gravity="end"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/primary"
                style="@style/Widget.AppCompat.Button.Borderless"/>
            <ImageView android:layout_width="wrap_content"
                android:layout_height="@dimen/login_height"
                android:layout_marginTop="@dimen/login_margin_top"
                android:layout_marginBottom="@dimen/login_padding_top"
                android:src="@drawable/mifos_logo"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|start"
                android:id="@+id/tv_passcode"
                android:text="@string/passcode_setup"
                android:layout_marginBottom="@dimen/default_margin"
                android:textSize="@dimen/text_large"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin">
                <org.mifos.selfserviceapp.utils.PassCodeView
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:id="@+id/pv_passcode"
                    android:layout_gravity="center"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/iv_visibility"
                    android:layout_marginLeft="@dimen/default_padding"
                    android:layout_marginStart="@dimen/default_padding"
                    app:srcCompat="@drawable/ic_visibility_48px"/>
            </LinearLayout>
            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_margin="@dimen/default_margin">
                <TableRow>
                    <android.support.v7.widget.AppCompatButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/one"
                        android:id="@+id/btn_one"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textColor="@color/primary"
                        style="@style/Widget.AppCompat.Button.Borderless"/>
                    <android.support.v7.widget.AppCompatButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/two"
                        android:id="@+id/btn_two"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textColor="@color/primary"
                        style="@style/Widget.AppCompat.Button.Borderless"/>
                    <android.support.v7.widget.AppCompatButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/three"
                        android:id="@+id/btn_three"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textColor="@color/primary"
                        style="@style/Widget.AppCompat.Button.Borderless"/>
                    </TableRow>
                <TableRow>
                    <android.support.v7.widget.AppCompatButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/four"
                        android:id="@+id/btn_four"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textColor="@color/primary"
                        style="@style/Widget.AppCompat.Button.Borderless"/>
                    <android.support.v7.widget.AppCompatButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/five"
                        android:id="@+id/btn_five"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textColor="@color/primary"
                        style="@style/Widget.AppCompat.Button.Borderless"/>
                    <android.support.v7.widget.AppCompatButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/six"
                        android:id="@+id/btn_six"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textColor="@color/primary"
                        style="@style/Widget.AppCompat.Button.Borderless"/>
                </TableRow>
                <TableRow>
                    <android.support.v7.widget.AppCompatButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/seven"
                        android:id="@+id/btn_seven"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textColor="@color/primary"
                        style="@style/Widget.AppCompat.Button.Borderless"/>
                    <android.support.v7.widget.AppCompatButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/eight"
                        android:id="@+id/btn_eight"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textColor="@color/primary"
                        style="@style/Widget.AppCompat.Button.Borderless"/>
                    <android.support.v7.widget.AppCompatButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nine"
                        android:id="@+id/btn_nine"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textColor="@color/primary"
                        style="@style/Widget.AppCompat.Button.Borderless"/>
                </TableRow>
                <TableRow>
                    <View />
                    <android.support.v7.widget.AppCompatButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/zero"
                        android:id="@+id/btn_zero"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textColor="@color/primary"
                        style="@style/Widget.AppCompat.Button.Borderless"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_backspace_48px"
                        android:id="@+id/btn_back"
                        style="@style/Widget.AppCompat.Button.Borderless"/>
                </TableRow>
            </TableLayout>
            <android.support.v7.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:id="@+id/btn_save"
                android:textColor="@color/white"/>
            <android.support.v7.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_passcode"
                android:textColor="@color/primary"
                android:id="@+id/btn_forgot_passcode"
                android:layout_gravity="center"
                android:visibility="gone"
                android:layout_marginTop="@dimen/default_padding"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                style="@style/Widget.AppCompat.Button.Borderless"/>
        </LinearLayout>
    </android.support.design.widget.CoordinatorLayout>
</android.support.v4.widget.NestedScrollView>