<resources>
    <string name="app_name">Mifos Mobile</string>
    <string name="login">Login</string>
    <string name="toast_welcome">Welcome %1$s</string>
    <string name="unable_to_connect">Not connected to internet</string>
    <string name="basic">Basic</string>
    <string name="username">Username</string>
    <string name="progress_message_login">Logging In</string>
    <string name="progress_message_loading">Loading</string>
...
    <string name="error_passcode">Passcode should be of 4 digit</string>
    <string name="incorrect_passcode">Incorrect Passcode</string>
    <string name="incorrect_passcode_more_than_three">You have entered incorrect Passcode more than
        3 times
    </string>
    <string name="skip">Skip</string>
    <string name="save">Save</string>
    <string name="passcode_setup">Setup a passcode to login</string>
    <string name="reenter_passcode">Please re-enter your passcode</string>
    <string name="passcode_does_not_match">Passcode does not match.</string>
    <string name="forgot_passcode">Forgot passcode, login manually</string>
    <string name="proceed">Proceed</string>
    <string name="grant_permission">Grant permission</string>
    <string name="deny">Deny</string>
    <string name="dismiss">Dismiss</string>
    <string name="amount_greater_than_zero">Amount should be greater than zero</string>
    <string name="about_us_under_construction">About Us Under Construction</string>
    <string name="help_under_construction">Help Under Construction</string>
...
